# Kaelock

./: .gitignore  CMakeLists.txt  README  README.md
Bernard/: CMakeLists.txt
Bernard/include/: Matrix.hpp  NeuralNetwork.hpp
Bernard/src/: Matrix.cpp  NeuralNetwork.cpp
Bratva/: CMakeLists.txt
Bratva/include/: Debug.hpp  GameInstance.hpp  Window.hpp
Bratva/include/ecs/: Entities.hpp  Entitys.hpp
Bratva/include/math/: MathTypes.hpp
Bratva/include/renderer/: Buffer.hpp  IndexBuffer.hpp  Shaders.hpp  Triangle.hpp  VertexBuffer.hpp
Bratva/include/util/: Vec4.hpp
Bratva/src/: GameInstance.cpp  Window.cpp
Bratva/src/ecs/: Entities.cpp  Entitys.cpp
Bratva/src/math/: Vec2f.cpp
Bratva/src/renderer/: Buffer.cpp  IndexBuffer.cpp  Shaders.cpp  Triangle.cpp  VertexBuffer.cpp
Bratva/src/util/: Vec4.cpp
Res/Shaders/: triangle_fs.glsl  triangle_vs.glsl
Res/Shaders/Examples/: compute_fragment_shader.glsl  compute_shader.glsl  compute_vertex_shader.glsl  sprite_fragment_shader.glsl  sprite_geometry_shader.glsl  sprite_vertex_shader.glsl
src/: Pong.cpp
test/: BratvaTest.hpp  Test.cpp
